Listed pizza array with javascript

--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<title>Pizza calculator</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link rel="stylesheet" href="css.css">
 </head>
 <body>
 
 	<h1>Pizza calculator</h1>
 
-	<a href="#"></a>
-	<a href="#"></a>
-	<a href="#"></a>
-	<a href="#"></a>
-	<a href="#"></a>
-	<a href="#"></a>
-	<a href="#"></a>
-	
+	<table class="table" style="width: 500px; margin: 0 auto">
+	  <thead class="thead-dark">
+	    <tr>
+	      <th>#</th>
+	      <th>Pizza</th>
+	    </tr>
+	  </thead>
 
+	  <tbody id="tbody">
+
+	  </tbody>
+	</table>
 
 <script src="js.js" type="text/javascript" ></script>
+<script>startPizza()</script>
 
 </body>
 </html>
