Now counting total price of pizza and toppings

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 				<h4 id="pizzaPrice">Hier komt de prijs</h4>
 			</div>
 
-			<div class="col">
-				<h2>Kies toppings</h2>
+			<div id="toppingDiv" class="col">
+				<!-- <h2>Kies toppings</h2> -->
 			</div>
 		</div>
 	</div>
