You can now choose normal, medium, large, xl. Needs to unselect at second click.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 			<div id="toppingDiv" class="col">
 				<!-- <h2>Kies toppings</h2> -->
 			</div>
+
+			<div id="sizeDiv" class="col">
+				<!-- <h2>Kies toppings</h2> -->
+			</div>
 		</div>
 	</div>
 
