Pizza calculator now has all required functionality. Code can be more compact and arrays should be turned into objects.

--- a/index.html
+++ b/index.html
@@ -35,18 +35,14 @@
 				<h4 id="pizzaPrice">Hier komt de prijs</h4>
 			</div>
 
-			<div id="toppingDiv" class="col">
-				<!-- <h2>Kies toppings</h2> -->
-			</div>
-
-			<div id="sizeDiv" class="col">
-				<!-- <h2>Kies toppings</h2> -->
+			<div id="dynamicDiv" class="col">
+				<h2 id="dynamicH2">Choose toppings</h2>
 			</div>
 		</div>
 	</div>
 
-<script src="js.js" type="text/javascript" ></script>
-<script>startPizza()</script>
+	<script src="js.js" type="text/javascript" ></script>
+	<script>startPizza()</script>
 
 </body>
 </html>
