--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		  </thead>
 
 		  <tbody id="tbody">
-
+		 
 		  </tbody>
 		</table>
 
@@ -31,7 +31,7 @@
 		<div class="row">
 			<div class="col" style="float: left;">
 				<h2 id="pizzaName">Hier komt de pizza naam</h2>
-				<img style="width: 300px" id="pizzaPicture"></img>
+				<img style="width: 300px" id="pizzaPicture">
 				<h4 id="pizzaPrice">Hier komt de prijs</h4>
 			</div>
 
