--- a/index.html
+++ b/index.html
@@ -3,42 +3,47 @@
 <head>
 	<title>Pizza calculator</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet"> 
 	<link rel="stylesheet" href="css.css">
 	<meta charset="utf-8">
 </head>
 <body>
 
-	<h1>Pizza calculator</h1>
+	<div id="wrapper">
 
-	<div id="homePage">
+		<h1 style="font-family: 'Pacifico', cursive;" onclick="reload()">Pizza calculator</h1>
 
-		<table class="table" style="width: 500px; margin: 0 auto">
-		  <thead class="thead-dark">
-		    <tr>
-		      <th>#</th>
-		      <th>Pizza</th>
-		    </tr>
-		  </thead>
+		<div id="homePage">
 
-		  <tbody id="tbody">
-		 
-		  </tbody>
-		</table>
+			<table class="table" style="width: 500px; margin: 0 auto">
+			  <thead class="thead-dark">
+			    <tr>
+			      <th>Pizza</th>
+			      <th>#</th>
+			    </tr>
+			  </thead>
 
-	</div>
+			  <tbody id="tbody">
+			 
+			  </tbody>
+			</table>
 
-	<div class="container" id="pizzaInfo">
-		<div class="row">
-			<div class="col" style="float: left;">
-				<h2 id="pizzaName">Hier komt de pizza naam</h2>
-				<img style="width: 300px" id="pizzaPicture">
-				<h4 id="pizzaPrice">Hier komt de prijs</h4>
-			</div>
+		</div>
 
-			<div id="dynamicDiv" class="col">
-				<h2 id="dynamicH2">Choose toppings</h2>
+		<div class="container" id="pizzaInfo">
+			<div class="row">
+				<div class="col" style="float: left;">
+					<h2 id="pizzaName">Hier komt de pizza naam</h2>
+					<img style="width: 300px" id="pizzaPicture">
+					<h4 id="pizzaPrice">Hier komt de prijs</h4>
+				</div>
+
+				<div id="dynamicDiv" class="col">
+					<h2 id="dynamicH2">Choose toppings</h2>
+				</div>
 			</div>
 		</div>
+
 	</div>
 
 	<script src="js.js" type="text/javascript" ></script>
