You are now able to order multiple pizzas, there is a bug in the calculation.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet"> 
 	<link rel="stylesheet" href="css.css">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<meta charset="utf-8">
 </head>
 <body>
@@ -29,6 +30,8 @@
 			</table>
 
 		</div>
+
+		<div id="showButton"></div>
 
 		<div class="container" id="pizzaInfo">
 			<div class="row">
